# Quimera

./: .gitignore  LICENSE  README.md
mirage-core/: .gitignore  CMakeLists.txt  main.cpp
mirage-core/encryption/: Encryption.cpp  Encryption.h
mirage-core/encryption/methods/AES/: AES.cpp  AES.h  AESGCM128.cpp  AESGCM128.h  GF256.cpp  GF256.h  SBox.cpp  SBox.h
mirage-core/engines/encryption/: IPolymorphicEncryptionEngine.h  PolymorphicEncryptionEngine.cpp  PolymorphicEncryptionEngine.h
mirage-core/file/: FileHandler.cpp  FileHandler.h
mirage-core/utils/crypto/: CryptoStateHandler.cpp  CryptoStateHandler.h
mirage-core/utils/math/: LatticeNoise.cpp  LatticeNoise.h  LorenzAttractor.cpp  LorenzAttractor.h  RNG.cpp  RNG.h
